# arduino-printf

./: .adr-dir  .gitignore  .gitmodules  ArduinoPrintf.cpp  ArduinoPrintf.h  LICENSE  Makefile  README.md  advanced_usage.md  library.json  library.properties  meson.build
examples/default_to_serial/: default_to_serial.ino
examples/override_putchar/: override_putchar.ino
examples/specify_print_class/: specify_print_class.ino
extras/docs/adr/: 0001-record-architecture-decisions.md  0002-library-source-reorganization-to-support-avr-default-settings.md
extras/sketch_cpp/: default_to_serial.cpp  override_putchar.cpp  specify_print_class.cpp
extras/test/: LibPrintf.h
src/: LibPrintf.cpp  LibPrintf.h
subprojects/: arduinocore-avr.wrap
test/: ArduinoPrintfTests.cpp  catch.hpp
tools/: CI.jenkinsfile  Jenkinsfile
